# Linux-Project

./: README.md
ai_ipcamera-agora_rtc/: PACKAGE_INFO  README.RTM.md  README.md
ai_ipcamera-agora_rtc/agora_sdk/: .config
ai_ipcamera-agora_rtc/agora_sdk/include/: agora_rtc_api.h
ai_ipcamera-agora_rtc/docs/: PORTING.md
ai_ipcamera-agora_rtc/example/: CMakeLists.txt  build-aarch64.sh  build-x86_64.sh
ai_ipcamera-agora_rtc/example/hello_rtm/: CMakeLists.txt  hello_rtm.c
ai_ipcamera-agora_rtc/example/hello_rtsa/: CMakeLists.txt  app_config.h  audio_rtc.c  hello_rtsa.c  hello_rtsa_multi.c  pcm_save.c  play_pcm.c  save_and_play.c
ai_ipcamera-agora_rtc/example/scripts/: env.cmake
ai_ipcamera-agora_rtc/example/utility/: fifo.c  fifo.h  file_writer.c  file_writer.h  log.h  pacer.c  pacer.h  utility.c  utility.h
